--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,10 @@
     margin-top: 30px;
 }
 
+.mrt10 {
+    margin-top: 10px;
+}
+
 .mrl30 {
     margin-left: 30px;
 }
@@ -264,11 +268,16 @@
 }
 
 .img-tarjetas {
-    max-width: 280px;
-    max-height: 450px;
+    width: 280px;
+    height: 380px;
     border-radius: 10px;
 }
 
+.card {
+    border-radius: 10px;
+    background-color: rgba(252, 97, 4);
+    color: #fff;
+}
 
 /* Pantalla para Celulares */
 
