--- a/css/estilos.css
+++ b/css/estilos.css
@@ -287,16 +287,30 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
+        align-items: center;
+        justify-content: center;
     }
 
     .img-tarjetas {
-        width: 150px;
-        height: 220px;
+        width: 180px;
+        height: 240px;
         border-radius: 10px;
     }
 
     .presentacion h5 {
         font-size: 14px;
+    }
+
+    .card-title{
+        font-size: 14px;
+    }
+
+    .ico {
+        width: 20px;
+        height: 20px;
+    }
+    .wsp {
+        font-size: 8px;
     }
 
 }
