--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,6 +81,11 @@
     text-align: justify;
 }
 
+.deco-none {
+    text-decoration: none;
+    color: black;
+}
+
 /* Fin Generales */
 
 /* header */
@@ -140,10 +145,8 @@
 /* Imagen Principal */
 
 .img-principal {
-    /* width: 550px; */
     width: 100%;
-    height: 350x;
-    /* border: 1px solid black; */
+    height: 350px;
     padding-left: 50px;
 }
 
@@ -350,13 +353,18 @@
         font-size: 8px;
     }
 
+    .img-principal-logo {
+        width: 250px;
+        height: 250px;
+    }
 }
 
 /* Fin Pantalla de Celulares */
 
 /* Pantalla de tablets */
 
-@media (min-width: 481px) and (max-width: 768px) {
+/* @media (min-width: 481px) and (max-width: 768px) { */
+@media (min-width: 481px) and (max-width: 820px) {
 
     .cards {
         display: grid;
@@ -401,6 +409,41 @@
 
 /* Fin Cards */
 
+
+/* Imagen Contratista */
+
+.cont-contratista {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-contratista {
+    margin: 20px;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    border: 2px solid black;
+    padding: 3px;
+}
+
+/* Fin Imagen Contratista */
+
+
+/* Icono de WhatsApp */
+
+.img-wst-green {
+    width: 60px;
+    height: 60px;
+
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+/* Fin Icono de WhatsApp */
 
 /* footer */
 
