--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,7 +94,6 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    /* background-color: rgb(39, 38, 38); */
     /* background-color: rgb(252, 97, 4); */
     background-color: rgba(252, 97, 4, 0.7);
     justify-content: space-between;
@@ -112,7 +111,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* margin-right: 10px; */
     align-items: center;
     text-align: center;
     color: #fff;
@@ -162,6 +160,12 @@
     .menu-hamburguesa {
         display: none;
     }
+
+    .img-principal-logo {
+        margin-top: 20%;
+        width: 300px;
+        height: 300px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -179,6 +183,7 @@
     }
 
     .menu-hamburguesa {
+        z-index: 100;
         display: flex;
         flex-wrap: wrap;
         width: 100%;
@@ -194,6 +199,7 @@
     }
 
     .nav {
+        z-index: 100;
         opacity: 0;
         visibility: hidden;
         display: flex;
@@ -206,11 +212,12 @@
         /* background-color: rgba(0, 0, 0, 1); */
         background-color: rgba(252, 97, 4);
         padding: 15px;
-        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .7);
+        box-shadow: 0 0 0 200vmax rgba(0, 0, 0, .7);
         border-radius: 10px;
     }
 
     .nav.visible {
+        z-index: 100;
         opacity: 1;
         visibility: visible;
     }
@@ -354,8 +361,8 @@
     }
 
     .img-principal-logo {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
     }
 }
 
@@ -400,7 +407,10 @@
         padding-left: 0px;
     }
 
-
+    .img-principal-logo {
+        width: 250px;
+        height: 250px;
+    }
 
 }
 
